--- a/package.json
+++ b/package.json
@@ -23,23 +23,28 @@
     "npm": ">= 5.6.0"
   },
   "dependencies": {
-    "bignumber.js": "^7.2.1",
+    "bn.js": "^4.11.8",
     "compare-versions": "^3.3.0",
+    "moment": "^2.22.2",
+    "node-fetch": "^2.2.0",
     "rlp": "^2.1.0",
     "sha3": "^1.2.2",
     "solc": "^0.4.24",
+    "truffle-flattener": "^1.2.6",
+    "truffle-hdwallet-provider": "^1.0.0-web3one.0",
     "web3": "^1.0.0-beta.35",
-    "yargs": "^12.0.1"
+    "yargs": "^12.0.1",
+    "zeppelin-solidity": "^1.12.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
+    "babel-eslint": "^9.0.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-standard": "^3.1.0"
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
